--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   text-align: center;
   background-color: #00DBDE;
   background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+  height: 100vh
 }
 
 .App-logo {
